# pycfg-rs

./: .gitignore  .hive.toml  Cargo.toml  PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml
.hive/: project-context.md
bench/: bench.py
benchmark/: bench.py
docs/: SPEC.md  cli-primitive.md  llm-usage.md  profiling.md  roadmap.md
examples/: profile_harness.rs
scripts/: bootstrap-corpora.sh  generate_report.py
src/: cfg.rs  lib.rs  main.rs
src/cfg/: builder.rs  mod.rs  model.rs  tests.rs
src/writer/: mod.rs
tests/: cli.rs  integration.rs
tests/golden/: basic_if.dot  basic_if.json  basic_if.summary.json  basic_if.summary.text  basic_if.text  loops.list-functions.json  loops.list-functions.text
tests/test_code/: basic_if.py  loops.py  match_case.py  try_except.py
tests/test_inputs/: invalid_syntax.py
