[package]
name = "pycfg-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pycfg"
path = "src/main.rs"

[lib]
name = "pycfg_rs"
path = "src/lib.rs"

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
